[project]
name = "exercicio-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "langchain>=1.3.7",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "pypdf>=6.13.2",
    "tiktoken>=0.13.0",
]
